tests/snapshots/integration__integration_tests__approval_ui__approval_named_commands.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----

----- stderr -----
[33m▲[39m [33m[1morigin[22m needs approval to execute [1m3[22m commands:[39m
[2m○[22m post-create [1minstall[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Installing dependencies...'[0m[2m
[2m○[22m post-create [1mbuild[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Building project...'[0m[2m
[2m○[22m post-create [1mtest[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Running tests...'[0m[2m
[31m✗[39m [31mCannot prompt for approval in non-interactive environment[39m
[2m↳[22m [2mTo skip prompts in CI/CD, add [4m--yes[24m; to pre-approve commands, run [4mwt config approvals add[24m[22m
