tests/snapshots/integration__integration_tests__approval_ui__yes_does_not_save_approvals_second_run.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----

----- stderr -----
[33m▲[39m [33m[1morigin[22m needs approval to execute [1m1[22m command:[39m
[2m○[22m post-create:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m[2m [0m[2m[36m>[0m[2m output.txt
[31m✗[39m [31mCannot prompt for approval in non-interactive environment[39m
[2m↳[22m [2mTo skip prompts in CI/CD, add [4m--yes[24m; to pre-approve commands, run [4mwt config approvals add[24m[22m
